Complete/Pacman/pacman-master/src/bin/game_BuildLog.txt
parsing
Got 43 errors and 0 warnings while executing:
  (/Users/nick/Downloads/src/game.js 15:30) Error: Syntax error
  (/Users/nick/Downloads/src/game.js 27:37) Error: Syntax error
  (/Users/nick/Downloads/src/game.js 83:36) Error: Syntax error
  (/Users/nick/Downloads/src/game.js 101:39) Error: Syntax error
  (/Users/nick/Downloads/src/game.js 116:40) Error: Syntax error
  ...


// current game mode
var gameMode = GAME_PACMAN;
var getGameName = (function(){
                             ^

Error: Syntax error


